fix: increase visibilty of upvote

--- a/api/app/components/Presenter/styles.css
+++ b/api/app/components/Presenter/styles.css
@@ -123,7 +123,7 @@
 
 .upvote-count {
   display: inline;
-  font-weight: 100;
+  font-weight: 600;
   margin-right: 0.25rem;
   line-height: 1rem;
 }
